# ITRL-Convert

./: .gitignore  CMakeLists.txt  README.md  ThreadPool.h  build.sh  build_test.sh  convert_rgb24_to_yuyv.h  convert_rgb24_to_yuyv_cuda.cu  convert_rgb24_to_yuyv_cuda.h  convert_rgb24_to_yuyv_neon.h  convert_rgb24_to_yuyv_parallel.h  demo.cpp  demo.sh  demo_global_index.h  demo_sensor_buffer.cpp  fisheye.h  homography.h  init_v4l2.sh  main.cpp  sensor.h  spinnaker_stream.cpp  spinnaker_stream.go  spinnaker_stream.h  test.cpp  test.sh  util.h
camera/: CMakeLists.txt  README.md  fisheye_criteria.cpp  fisheye_undistort.cpp  homography_criteria.cpp
camera/include/: component.h  fisheye.h  gamma.h  homography.h  ring_buffer.h  util.h
camera/src/: component.cpp  fisheye.cpp  gamma.cpp  homography.cpp  ring_buffer.cpp  util.cpp
cuda/: CMakeLists.txt  cuda_encoder.cu  formatting.cu  formatting.h  resolution.cu  resolution.h
cuda/include/: bayer2nv12.h  bayer2rgb.h  bayer2yuyv.h  bayerRG2rgb.h  cuda_buffer.h  cuda_stream.h  formatting.h  h265_encoder.h  rgb2yuyv.h
cuda/src/: bayer2nv12.cu  bayer2rgb.cu  bayer2yuyv.cu  bayerRG2rgb.cu  cuda_buffer.cu  cuda_stream.cu  formatting.cu  h265_encoder.cpp  rgb2yuyv.cu
cuda/tests/: CMakeLists.txt  cuda_test.cpp
demo/: CMakeLists.txt  demo.cpp  demo_sensor.cpp  demo_sensor.h
motion/: CMakeLists.txt  cyra.h
motion/include/: cyra.h  kbm.h
motion/src/: cyra.cpp  kbm.cpp
motion/tests/: CMakeLists.txt  cyra_test.cpp  motion_test.cpp
rgb2yuyv/: CMakeLists.txt
rgb2yuyv/src/: rgb2yuyv.cu
run/: build  docker-build  docker-compose-datastreamer.yml  docker-run  fisheye_calibration.yaml  hmi_bridge.py  homography_calibration.yaml  init_v4l2  rcve_bridge.py  streamming  svea_stream
sensor/: CMakeLists.txt
sensor/include/: data_logger.h  sensor.h  sensor_api.h  socket_bridge.h
sensor/src/: data_logger.cpp  sensor.cpp  sensor_api.cpp  socket_bridge.cpp
sensor/tests/: CMakeLists.txt  socket_bridge_test.cpp
sensor/tests/server/: CMakeLists.txt  start.cpp  udp_server.cpp  udp_server.h
spinnaker_stream/: CMakeLists.txt  spinnaker_stream.cpp  spinnaker_stream.h
spinnaker_stream/include/: spinnaker_stream.h
spinnaker_stream/src/: spinnaker_stream.cpp
svea_hmi_bridge/: package.xml  setup.cfg  setup.py  test_udp_receiver.py
svea_hmi_bridge/launch/: udp_bridge.launch.py
svea_hmi_bridge/svea_hmi_bridge/: udp_bridge_node.py
zed_stream/: CMakeLists.txt  zed_stream.cpp  zed_stream.h
